feat:header-complete

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+<header class="p-2">
+    <div class="d-flex justify-content-end align-items-center">
+        <div class="pe-4"><span class="bi bi-chat-left text-primary fs-5"></span></div>
+        <div class="pe-4"><span  class="bi bi-bell text-primary  fs-5"></span></div>
+        <div class="w-40px h-40px overflow-hidden rounded-circle">
+          <img src="./../../../assets/images/image-thomas.jpg" width="100%">
+        </div>
+        <div class="pe-5 ps-2"><span class="bi bi-chevron-down text-primary fs-5 fw-bolder"></span></div>
+    </div>
+</header>
