--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+// import all bootstrap icon
+@import "../node_modules/bootstrap-icons/font/bootstrap-icons.scss";
+// import all scss
+@import "assets/scss/base/index";
+@import "assets/scss/componet/index";
+@import "assets/scss/layout/index";
+@import "assets/scss/vandar/index";
+@import "assets/scss/utility/index";
