feat:aside complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="main-container d-flex h-100">
-  <div class="aside border border-danger">
+  <div class="aside">
     <app-aside></app-aside>
   </div>
   <div class="wrapper-main d-flex flex-column flex-grow-1 h-100">
     <div class="header">
       <app-header></app-header>
     </div>
-    <div class="main flex-grow-1 border border-danger">
+    <div class="main flex-grow-1 bg-info">
       <router-outlet></router-outlet>
     </div>
   </div>
