--- a/src/assets/scss/utility/_utility.scss
+++ b/src/assets/scss/utility/_utility.scss
@@ -1,7 +1,13 @@
 ul{
     li{
-        list-style-type: none;
+       list-style: none;
     }
+}
+a{
+    cursor: pointer;
+}
+.bi{
+cursor: pointer;
 }
 ul {
    padding-left: 0; 
