--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -1,1 +1,11 @@
-<p>employee-list works!</p>
+<main class="p-3">
+    <!-- search button section -->
+    <div class="d-flex justify-content-between align-items-center">
+        <div class="position-relative d-flex">
+            <span class="bi bi-search position-absolute top-50 ms-4 translate-middle"></span>
+                 <input type="text" class="py-1 px-5 form-control rounded-0 rounded-start">
+                 <button class="btn btn-primary p-0 py-1 rounded-0 rounded-end px-4">Search</button>
+        </div> 
+        <button class="btn btn-primary p-0 "><span class="bi bi-plus fs-5"></span ><span class="pe-2">Add Employee</span></button>   
+    </div>
+</main>
