feat:design-filter-short select option

--- a/src/assets/scss/base/_variable.scss
+++ b/src/assets/scss/base/_variable.scss
@@ -1,1 +1,5 @@
 $link-decoration:none;
+$input-focus-box-shadow: none;
+$form-select-focus-box-shadow:none;
+$form-select-font-size:13px;
+$form-select-color:gray;
