--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="header">
       <app-header></app-header>
     </div>
-    <div class="main flex-grow-1 bg-info">
+    <div class="main flex-grow-1 bg-info p-3">
       <router-outlet></router-outlet>
     </div>
   </div>
