--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -1,11 +1,65 @@
-<main class="p-3">
+<main class="pt-2">
     <!-- search button section -->
     <div class="d-flex justify-content-between align-items-center">
-        <div class="position-relative d-flex">
-            <span class="bi bi-search position-absolute top-50 ms-4 translate-middle"></span>
-                 <input type="text" class="py-1 px-5 form-control rounded-0 rounded-start">
-                 <button class="btn btn-primary p-0 py-1 rounded-0 rounded-end px-4">Search</button>
-        </div> 
-        <button class="btn btn-primary p-0 "><span class="bi bi-plus fs-5"></span ><span class="pe-2">Add Employee</span></button>   
+      <div class="position-relative d-flex">
+        <label
+          class="bi bi-search position-absolute top-50 ms-4 translate-middle text-secondary"
+          for="search"
+        ></label>
+        <input
+          type="text"
+          class="py-1 px-5 form-control rounded-0 rounded-start"
+          id="search"
+        />
+        <button class="btn btn-primary p-0 py-1 rounded-0 rounded-end px-4">
+          Search
+        </button>
+      </div>
+      <button class="btn btn-primary p-0 d-flex align-items-center">
+        <span class="bi bi-plus fs-5 px-1"></span
+        ><span class="pe-2">Add Employee</span>
+      </button>
     </div>
-</main>
+    <!-- filter or short -->
+    <div class="mt-3 d-flex justify-content-between bg-white p-3">
+      <!-- filter -->
+      <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center">
+          <span class="bi bi-funnel text-primary fs-5"></span>
+          <span class="text-secondary text-nowrap px-1">Filter By</span>
+        </div>
+        <select class="form-select me-2" aria-label="Default select example">
+          <option selected>Select Country</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+        <select class="form-select me-2" aria-label="Default select example">
+          <option selected>Select State</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+        <select class="form-select" aria-label="Default select example">
+          <option selected>Select City</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+      </div>
+      <!-- Shorting -->
+      <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center">
+          <span class="bi bi-filter text-primary fs-4"></span>
+          <span class="text-secondary text-nowrap px-1">Short By</span>
+        </div>
+        <select class="form-select" aria-label="Default select example">
+          <option selected>Name</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+      </div>
+    </div>
+  </main>
+  
