feat:compelete employee-list

--- a/src/app/core/aside/aside.component.html
+++ b/src/app/core/aside/aside.component.html
@@ -35,7 +35,7 @@
   </aside>
   <!-- Sub-menu -->
   <div 
-    class="sub-menu d-flex flex-column  bg-success h-100 "
+    class="sub-menu d-flex flex-column bg-light h-100 "
     [ngClass]="flag ? 'd-none' : 'd-block'"
   >
     <div class="d-flex sub-menu-header">
