--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -25,3 +25,11 @@ body{
 .h-20px{
     height: 20px;
 }
+
+// list profile image width height
+.w-150px{
+    width: 150px;
+}
+.h-200px{
+    height: 200px;
+}
