--- a/src/assets/scss/base/_variable.scss
+++ b/src/assets/scss/base/_variable.scss
@@ -3,3 +3,4 @@ $input-focus-box-shadow: none;
 $form-select-focus-box-shadow:none;
 $form-select-font-size:13px;
 $form-select-color:gray;
+$card-spacer-y:0px;
