--- a/src/assets/scss/layout/_aside.scss
+++ b/src/assets/scss/layout/_aside.scss
@@ -4,7 +4,7 @@ aside{
         .nav-item{
             transition: 0.2s ease-in-out;
             &:hover{
-                 background-color:$success;
+                 background-color:$light;
                  
             }
         }
