feat:ovelay open

--- a/src/app/core/aside/aside.component.html
+++ b/src/app/core/aside/aside.component.html
@@ -42,13 +42,13 @@
      <div class="submenu-icon-header w-20px h-20px rounded-circle d-flex align-items-center justify-content-center pe-1">
           <span class="bi bi-chevron-left text-primary  "></span>
       </div>
-        <h6 class="ps-2">Manage Employee</h6>
+        <h6 class="ps-2 text-nowrap">Manage Employee</h6>
     </div>
   <ul class="nav pt-3">
     <li class="nav-item p-3">
       <a href="javascript:void(0)" class="nav-link d-flex align-items-center">
         <span class="bi bi-plus-square fs-6 pe-3"></span>
-        <span class="fs-6">Add New employee</span>
+        <span class="fs-6 text-nowrap">Add New employee</span>
     </a>
     </li>
     <li class="nav-item p-3">
