--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -10,7 +10,7 @@
             </button>
         </div>
         <button class="btn btn-primary p-0 d-flex align-items-center">
-            <span class="bi bi-plus fs-5 px-1"></span><span class="pe-2">Add Employee</span>
+            <span class="bi bi-plus fs-5 px-1"></span><span class="pe-2" (click)="openModel()">Add Employee</span>
         </button>
     </div>
     <!-- filter or short -->
