--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,5 @@
 @import "assets/scss/layout/index";
 @import "assets/scss/vandar/index";
 @import "assets/scss/utility/index";
+// cdk 
+@import '@angular/cdk/overlay-prebuilt.css';
