--- a/src/assets/scss/base/_variable.scss
+++ b/src/assets/scss/base/_variable.scss
@@ -2,5 +2,6 @@ $link-decoration:none;
 $input-focus-box-shadow: none;
 $form-select-focus-box-shadow:none;
 $form-select-font-size:13px;
+$input-btn-font-size:13px;
 $form-select-color:gray;
 $card-spacer-y:0px;
