--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -60,7 +60,7 @@
             <div class="col-lg-6">
                 <div class="card p-2 mt-2">
                     <div class="d-flex align-items-center">
-                        <div class="profile-image  w-150px h-200px d-flex justify-content-center overflow-hidden rgba-blue-light">
+                        <div class="profile-image  w-150px h-200px d-flex justify-content-center overflow-hidden ">
                             <img src="./../../../assets/images/profile-image.png" alt="profile image"
                                 class="h-100 w-auto  image-profile ">
                         </div>
@@ -103,7 +103,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <th>Comapany </th>
+                                            <th>Company </th>
                                             <td>1Rivet</td>
                                         </tr>
                                         <tr>
@@ -169,7 +169,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <th>Comapany </th>
+                                            <th>Company </th>
                                             <td>1Rivet</td>
                                         </tr>
                                         <tr>
@@ -235,7 +235,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <th>Comapany </th>
+                                            <th>Company </th>
                                             <td>1Rivet</td>
                                         </tr>
                                         <tr>
@@ -301,7 +301,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <th>Comapany </th>
+                                            <th>Company </th>
                                             <td>1Rivet</td>
                                         </tr>
                                         <tr>
@@ -367,7 +367,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <th>Comapany </th>
+                                            <th>Company </th>
                                             <td>1Rivet</td>
                                         </tr>
                                         <tr>
@@ -433,7 +433,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <th>Comapany </th>
+                                            <th>Company </th>
                                             <td>1Rivet</td>
                                         </tr>
                                         <tr>
