--- a/src/assets/scss/vandar/_component-bootstrap.scss
+++ b/src/assets/scss/vandar/_component-bootstrap.scss
@@ -6,3 +6,9 @@
 @import "../../../../node_modules/bootstrap/scss/grid";
 @import "../../../../node_modules/bootstrap/scss/helpers";
 @import "../../../../node_modules/bootstrap/scss/utilities/api";
+@import "../../../../node_modules/bootstrap/scss/button-group";
+@import "../../../../node_modules/bootstrap/scss/buttons";
+@import "../../../../node_modules/bootstrap/scss/forms";
+@import "../../../../node_modules/bootstrap/scss/card";
+@import "../../../../node_modules/bootstrap/scss/tables";
+@import "../../../../node_modules/bootstrap/scss/images";
