feat:json server created

--- a/src/app/employee/employee-form/employee-form.component.html
+++ b/src/app/employee/employee-form/employee-form.component.html
@@ -80,7 +80,7 @@
                 <div class="mb-3">
                     <label class="form-label fw-bold" for="inputEmail">Education Type</label>
                     <select class="form-select " aria-label="Default select example">
-                        <option selected>Select Country</option>
+                        <option selected>Select Education</option>
                         <option value="1">Post Graduate</option>
                         <option value="2">Under Graduate</option>
                     </select>
