--- a/src/app/employee/employee-form/employee-form.component.html
+++ b/src/app/employee/employee-form/employee-form.component.html
@@ -1,9 +1,9 @@
-<div class="bg-white h-100 w-25 position-absolute end-0">
+<div class="bg-white h-100 w-50 position-absolute end-0">
     <div class="d-flex justify-content-between align-items-center  bg-info px-3 py-2">
         <h5 class="text-uppercase fw-bold">Employee Details</h5>
         <span class="bi bi-x-circle fs-2 text-primary" (click)="close()"></span>
     </div>
-    <form class="p-3">
+    <form [formGroup]="employeeForm" class="p-3"  (ngSubmit)="saveEmployeeData()">
         <div class="row">
             <div class="col-lg-12">
                 <div class="d-flex justify-content-center align-items-center ">
@@ -21,7 +21,6 @@
                         </div>
                 </label>
                     <input type="file" class="d-none" id="image-upload" (change)="selectImage($event)">
-                  
                 </div>
             </div>
         </div>
@@ -79,9 +78,10 @@
                 <div class="mb-3">
                     <label class="form-label fw-bold" for="inputEmail">Education Type</label>
                     <select class="form-select " aria-label="Default select example">
-                        <option selected>Select Education</option>
-                        <option value="1">Post Graduate</option>
-                        <option value="2">Under Graduate</option>
+                        <option selected disabled>Select Education</option>
+                        <option *ngFor="let education of educationType">
+                            {{education.education}}
+                        </option>
                     </select>
                 </div>
             </div>
@@ -95,8 +95,11 @@
             <div class="col-lg-6">
                 <div class="mb-3">
                     <label class="form-label fw-bold" for="inputEmail">Select Country</label>
-                    <select class="form-select " aria-label="Default select example">
-                        <option selected>Select-Country</option>
+                    <select class="form-select " aria-label="Default select example"  (change)="onCountryChange($event)">
+                        <option selected disabled>Select-Country</option>
+                        <option *ngFor="let country of countries" [value]="country.isoCode">
+                            {{country.name}}
+                        </option>
                     </select>
                 </div>
             </div>
@@ -104,9 +107,12 @@
                 <div class="row">
                     <div class="col-lg-6">
                 <div class="mb-3">
-                    <label class="form-label fw-bold" for="inputEmail">Select State</label>
-                    <select class="form-select " aria-label="Default select example">
-                        <option selected>Select-State</option>
+                    <label class="form-label fw-bold" for="inputEmail" >Select State</label>
+                    <select class="form-select " aria-label="Default select example"  (change)="onStateChange($event)">
+                        <option selected disabled>Select-State</option>
+                        <option *ngFor="let state of state" [value]="state.isoCode">
+                            {{state.name}}
+                        </option>
                     </select>
                 </div>
                     </div>
@@ -114,7 +120,10 @@
                         <div class="mb-3">
                             <label class="form-label fw-bold" for="inputEmail">Select City</label>
                             <select class="form-select " aria-label="Default select example">
-                                <option selected>Select-City</option>
+                                <option selected disabled>Select-City</option>
+                                <option *ngFor="let city of city" [value]="city">
+                                    {{city.name}}
+                                </option>
                             </select>
                         </div>
                     </div>
