feat:validation emoloyee from

--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -40,7 +40,12 @@ body{
 .h-120px{
     height: 120px;
 }
- 
+ .fs-8{
+    font-size: 12px;
+ }
+ .mb-7{
+    margin-bottom: 100px;
+ }
 // Overlay backdrop styling
 .overlay-backdrop {
     background-color: rgba(0, 0, 0, 0.5);
