--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -1,4 +1,5 @@
-<main class="pt-2">
+<!-- main-wrapper -->
+<main class="pt-2 h-100">
     <!-- search button section -->
     <div class="d-flex justify-content-between align-items-center">
         <div class="position-relative d-flex">
@@ -14,6 +15,7 @@
         </button>
     </div>
     <!-- filter or short -->
+    
     <div class="mt-3 d-flex justify-content-between bg-white p-3">
         <!-- filter -->
         <div class="d-flex align-items-center">
@@ -54,19 +56,20 @@
             </select>
         </div>
     </div>
-    <!-- employee list card -->
+    <!-- Employee list card -->
+    <div class="h-100 overflow-auto">
     <section class="mt-4">
-        <div class="row">
-            <div class="col-lg-6">
+        <div class="row mb-5" >
+            <div class="col-lg-6" *ngFor="let item of EmployeeData">
                 <div class="card p-2 mt-2">
                     <div class="d-flex align-items-center">
                         <div class="profile-image  w-150px h-200px d-flex justify-content-center overflow-hidden ">
-                            <img src="./../../../assets/images/profile-image.png" alt="profile image"
+                            <img [src]="item.PersonalDetails.ProfileImage" alt="profile image"
                                 class="h-100 w-auto  image-profile ">
                         </div>
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center ">
-                                <h5 class="ms-1 text-uppercase">amresh prasad</h5>
+                                <h5 class="ms-1 text-uppercase">{{item.PersonalDetails.firstname}} {{item.PersonalDetails.lastname}}</h5>
                                 <div>
                                     <button class="btn btn-warning bi bi-eye me-2"> View</button>
                                     <button class="btn btn-success bi bi-pencil-square me-2"></button>
@@ -83,15 +86,15 @@
                                     <tbody>
                                         <tr>
                                             <th>Birthdate</th>
-                                            <td>04.06.1997</td>
+                                            <td>{{item.PersonalDetails.dob}}</td>
                                         </tr>
                                         <tr>
                                             <th>Gender</th>
-                                            <td>male</td>
+                                            <td>{{item.PersonalDetails.gender}}</td>
                                         </tr>
                                         <tr>
                                             <th>Educaton</th>
-                                            <td> undergraduate</td>
+                                            <td> {{item.PersonalDetails.educationtype}}</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -104,16 +107,19 @@
                                     <tbody>
                                         <tr>
                                             <th>Company </th>
-                                            <td>1Rivet</td>
+                                            <td>{{item.JobDetails
+                                                .companyname}}</td>
                                         </tr>
                                         <tr>
                                             <th>Experience</th>
-                                            <td>13 Yrs</td>
+                                            <td>{{item.JobDetails
+                                                .experience}}</td>
 
                                         </tr>
                                         <tr>
                                             <th>Salary</th>
-                                            <td>25LPA</td>
+                                            <td>{{item.JobDetails
+                                                .salary}}</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -125,4 +131,7 @@
             </div>
         </div>
     </section>
+    <!-- End Employee list card -->
+</div>
 </main>
+<!-- end Wrapper -->
